<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.InputActivity">

    <EditText
        android:id="@+id/edt_nama"
        android:hint="@string/nama"
        android:background="@drawable/background_text"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_nohp"
        android:hint="@string/no_hp"
        android:background="@drawable/background_text"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_alamat"
        android:hint="@string/alamat"
        android:background="@drawable/background_text"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linear_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_submit"
            android:text="@string/simpan"
            android:layout_width="0dp"
            android:layout_margin="4dp"
            android:background="#2ecc71"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_batal"
            android:text="@string/batal"
            android:background="#e74c3c"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>