<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_bar"
        android:layout_width="30dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/kotak_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/dummy_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_hp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_alamat"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/img_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>